--- a/components/howitworks/item/howitWorksItem.module.scss
+++ b/components/howitworks/item/howitWorksItem.module.scss
@@ -60,4 +60,32 @@
             @include ripple(2s, 0s);
         }
     }
+
+    .item-title {
+        font-size: 14px;
+
+        &.closed {
+            @media (max-width: 767px) {
+                display: none;
+            }
+        }
+    }
+
+    .trigger {
+
+        @media (max-width: 767px) {
+            background-color: transparent;
+        }
+
+        &.closed {
+            @media (max-width: 767px) {
+                border-radius: 50%;
+                padding: 8px;
+            }
+        }
+    }
+
+    .item-description {
+        font-size: 14px;
+    }
 }
